Запрос и одобрение денег у игрока
